<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity" >

    <TextView
        android:id="@+id/textView_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp"
        android:text="@string/setting_state"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_state"
        android:layout_marginTop="40dp"
        android:text="@string/settting_music"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_adjust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_music"
        android:layout_marginTop="40dp"
        android:text="@string/setting_adjust"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_adjust"
        android:layout_marginTop="40dp"
        android:text="@string/setting_volume"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView_state"
        android:layout_alignTop="@+id/textView_music"
        android:src="@drawable/on" />

    <ImageView
        android:id="@+id/imageView_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView_on"
        android:layout_toRightOf="@+id/imageView_on"
        android:src="@drawable/off" />

    <ImageView
        android:id="@+id/imageView_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView_state"
        android:layout_marginRight="47dp"
        android:src="@drawable/audio_on" />

    <ImageView
        android:id="@+id/imageView_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView_on"
        android:layout_alignTop="@+id/textView_adjust"
        android:src="@drawable/down" />

    <ImageView
        android:id="@+id/imageView_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView_off"
        android:layout_alignTop="@+id/imageView_down"
        android:src="@drawable/up" />

    <SeekBar
        android:id="@+id/seekBar_volume"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView_volume" 
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="134dp" >

        <TextView
            android:id="@+id/textView_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_clear"
            style="@style/SettingText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_back"
            android:layout_marginLeft="20dp"
            style="@style/SettingText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</RelativeLayout>